EUIficate visEditorSidebar directive

--- a/src/legacy/ui/public/collapsible_sidebar/_collapsible_sidebar.scss
+++ b/src/legacy/ui/public/collapsible_sidebar/_collapsible_sidebar.scss
@@ -7,7 +7,7 @@
   .kbnCollapsibleSidebar__collapseButton {
     position: absolute;
     top: 0;
-    right: -21px;
+    left: -21px;
     cursor: pointer;
     z-index: -1;
   }
